[gd_scene load_steps=22 format=3 uid="uid://dv4b12o1eayex"]

[ext_resource type="Texture2D" uid="uid://hk1ehullxu6i" path="res://assets/sprites/slime_purple.png" id="1_371uh"]
[ext_resource type="Script" uid="uid://dogphhkya0mx0" path="res://scripts/slime.gd" id="1_n6pvg"]
[ext_resource type="PackedScene" uid="uid://chtjwpe4jhua1" path="res://scenes/hurt_zone.tscn" id="3_n6pvg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p2gj0"]
atlas = ExtResource("1_371uh")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6pvg"]
atlas = ExtResource("1_371uh")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = ExtResource("1_371uh")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = ExtResource("1_371uh")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xjuo"]
atlas = ExtResource("1_371uh")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a02ik"]
atlas = ExtResource("1_371uh")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu8ps"]
atlas = ExtResource("1_371uh")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g40cl"]
atlas = ExtResource("1_371uh")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = ExtResource("1_371uh")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = ExtResource("1_371uh")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wyi"]
atlas = ExtResource("1_371uh")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8pv"]
atlas = ExtResource("1_371uh")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnioy"]
atlas = ExtResource("1_371uh")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_fd6lc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2gj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6pvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}],
"loop": true,
"name": &"chase",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a02ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu8ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g40cl")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}],
"loop": false,
"name": &"sleep",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnioy")
}],
"loop": false,
"name": &"wake_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6pvg"]
size = Vector2(14, 15)

[sub_resource type="GDScript" id="GDScript_n6pvg"]
script/source = "extends Area2D
"

[sub_resource type="CircleShape2D" id="CircleShape2D_n6pvg"]
radius = 94.0479

[sub_resource type="CircleShape2D" id="CircleShape2D_pjw23"]
radius = 70.0

[node name="Slime" type="Node2D"]
script = ExtResource("1_n6pvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_fd6lc")
animation = &"idle"
autoplay = "sleep"

[node name="HurtZone" parent="." instance=ExtResource("3_n6pvg")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtZone"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_n6pvg")

[node name="DetectionRadius" type="Area2D" parent="."]
collision_mask = 2
script = SubResource("GDScript_n6pvg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_n6pvg")

[node name="ChaseRadius" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseRadius"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_pjw23")

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 8.0

[connection signal="body_entered" from="DetectionRadius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_entered" from="ChaseRadius" to="." method="_on_chase_radius_body_entered"]
[connection signal="body_exited" from="ChaseRadius" to="." method="_on_chase_radius_body_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
